# Simulation-Platform

./: CMakeLists.txt  README.md
inputfiles/: .~lock.TBSizeLTE_27line.txt#  LTE_SINR2BLER_DL.txt  Layer4Imag.txt  Layer4Real.txt  MIESM_SINR.txt  MIESM_SINR_256QAM.txt  NR_SINR2BLER_DL.txt  NR_SINR2BLER_DL_LTE_HW.txt  NR_SINR2BLER_UL_Table1.txt  NR_SINR2BLER_UL_Table2.txt  OverWriteDL.txt  OverWriteUL.txt  PUSCH_64QAM_RB_TBSize_Table.txt  SINR2SI16QAM.txt  SINR2SI256QAM.txt  SINR2SI64QAM.txt  SINR2SIQPSK.txt  Scene.txt  TR3211024Imag.txt  TR3211024Real.txt  TR3222048Imag.txt  TR3222048Real.txt  TR32_layer_3_imag.txt  TR32_layer_3_real.txt  TR4_layer_1_imag.txt  TR4_layer_1_real.txt  TR4_layer_2_imag.txt  TR4_layer_2_real.txt  TR8_layer_1_imag.txt  TR8_layer_1_real.txt  TR8_layer_2_imag.txt  TR8_layer_2_real.txt  TR8_layer_3_imag.txt  TR8_layer_4_imag.txt  TR8_layer_4_real.txt
inputfiles/AI_model/: model_inference.py  model_inference_v3.py
inputfiles/databaseConfiguration/: map_database_cfg.json  training&sln_mopt_database_cfg.json
sourcecode/: CalcRENumperRB.cpp  CalcRENumperRB.h  DCI.cpp  DCI.h  DRX.cpp  DRX.h  Main.cpp  PHR.cpp  PHR.h  SR.cpp  SR.h  SafaUnordered_map.cpp  SafeDeque.h  SafeMap.h  SafeUnordered_map.h  UCI.cpp  UCI.h  WRITE_FIRST_RW_LOCK.h
sourcecode/BaseStation/: ACKNAKMessageUL.cpp  ACKNAKMessageUL.h  BS.cpp  BS.h  BSID.cpp  BSID.h  BTS.cpp  BTS.h  BTSEBBRank1Txer.cpp  BTSEBBRank1Txer.h  BTSID.cpp  BTSID.h  BTSMUEBBTxer.cpp  BTSMUEBBTxer.h  BTSRxer.cpp  BTSRxer.h  BTSTxer.cpp  BTSTxer.h  BTSVMIMORxer_trial_2.cpp  BTSVMIMORxer_trial_2.h  BTS_UL.cpp  BTS_UL.h  CodeBook.cpp  CodeBook.h  CodeBookFactory.cpp  CodeBookFactory.h  CodeBookLTE2TX.cpp  CodeBookLTE2TX.h  CodeBookLTE4TX.cpp  CodeBookLTE4TX.h  Group.cpp  Group.h  GroupID.cpp  GroupID.h  HARQRxStateBTS.cpp  HARQRxStateBTS.h  HARQTxStateBTS.cpp  HARQTxStateBTS.h  MSRxBufferBS.cpp  MSRxBufferBS.h  (+6 more)
sourcecode/ChannelModel/: AOGOmni.cpp  AOGOmni.h  AOGPico.cpp  AOGPico.h  AOGSector.cpp  AOGSector.h  AOGSector_inH_Circle.cpp  AOGSector_inH_Circle.h  Antenna.cpp  Antenna.h  AntennaOrientGain.cpp  AntennaOrientGain.h  AntennaPanel.cpp  AntennaPanel.h  BSTx.cpp  BSTx.h  BasicChannelState.cpp  BasicChannelState.h  CTXRU.cpp  CTXRU.h  ChannelState.cpp  ChannelState.h  GaussianMap.cpp  GaussianMap.h  LinkMatrix.cpp  LinkMatrix.h  MSRx.cpp  MSRx.h  P.cpp  P.h  PathLoss.cpp  PathLoss.h  PathLossIndoorFactoryDHNLOS.cpp  PathLossIndoorFactoryDHNLOS.h  PathLossIndoorFactoryLOS.cpp  PathLossIndoorFactoryLOS.h  PathLossIndoorHotspotLOS.cpp  PathLossIndoorHotspotLOS.h  PathLossIndoorHotspotLOS_Highfreq.cpp  PathLossIndoorHotspotLOS_Highfreq.h  (+80 more)
sourcecode/DetectAlgorithm/: Detector_Common.cpp  Detector_Common.h  Detector_DL.cpp  Detector_DL.h  Detector_UL.cpp  Detector_UL.h  IRC.cpp  IRC.h  IRCAlgorithm.cpp  IRCAlgorithm.h  MMSEAlgorithm.cpp  MMSEAlgorithm.h  MMSE_DL.cpp  MMSE_DL.h  MMSE_UL.cpp  MMSE_UL.h  MRCAlgorithm.cpp  MRCAlgorithm.h  MRC_DL.cpp  MRC_DL.h  MRC_UL.cpp  MRC_UL.h  SimpleMMSE_DL.cpp  SimpleMMSE_DL.h  SimpleMMSE_UL.cpp  SimpleMMSE_UL.h
sourcecode/DistributeMSAlgo/: DistributeMSAlgo.cpp  DistributeMSAlgo.h  DistributeMSAlgo4indoor.cpp  DistributeMSAlgo4indoor.h  DistributeMSAlgoCenterRectangle.cpp  DistributeMSAlgoCenterRectangle.h  DistributeMSAlgoDiamond.cpp  DistributeMSAlgoDiamond.h  DistributeMSAlgoFile.cpp  DistributeMSAlgoFile.h  DistributeMSAlgoFix.cpp  DistributeMSAlgoFix.h  DistributeMSAlgoForHetNet.cpp  DistributeMSAlgoForHetNet.h  DistributeMSAlgoHexagon.cpp  DistributeMSAlgoHexagon.h
sourcecode/LinklevelInterface/: FERTable.cpp  FERTable.h  LinkLevelInterface.cpp  LinkLevelInterface.h  LinkLevelNR.cpp  LinkLevelNR.h  RBIR2BLERNR.cpp  RBIR2BLERNR.h
sourcecode/MobileStation/: ACKNAKMessageDL.cpp  ACKNAKMessageDL.h  CQIMessage.cpp  CQIMessage.h  HARQRxStateMS.cpp  HARQRxStateMS.h  HARQTxStateMS.cpp  HARQTxStateMS.h  MS.cpp  MS.h  MSEBBRank1Rxer.cpp  MSEBBRank1Rxer.h  MSID.cpp  MSID.h  MSMRCTxer.cpp  MSMRCTxer.h  MSMUEBBRankARxer.cpp  MSMUEBBRankARxer.h  MSRxer.cpp  MSRxer.h  MSTxBufferMS.cpp  MSTxBufferMS.h  MSTxer.cpp  MSTxer.h  SRSTxer.cpp  SRSTxer.h  SoundingMessage.cpp  SoundingMessage.h
sourcecode/NetworkDrive/: BSManager.cpp  BSManager.h  ChannelUpdateThread.cpp  ChannelUpdateThread.h  Clock.cpp  Clock.h  MSManager.cpp  MSManager.h  MyTimer.cpp  MyTimer.h  NetWorkDrive.cpp  NetWorkDrive.h  Thread_control.cpp  Thread_control.h
sourcecode/Parameters/: Parameters.cpp  Parameters.h  envconfig.h
sourcecode/RIS/: BS2RISPathLossUrbanMacroOutdoorLOS.cpp  BS2RISPathLossUrbanMacroOutdoorLOS.h  BS2RISPathLossUrbanMacroOutdoorNLOS.cpp  BS2RISPathLossUrbanMacroOutdoorNLOS.h  BS2RISPathLossUrbanMicroLOS.cpp  BS2RISPathLossUrbanMicroLOS.h  BS2RISPathLossUrbanMicroLOS_Highfreq.cpp  BS2RISPathLossUrbanMicroLOS_Highfreq.h  BS2RISPathLossUrbanMicroNLOS.cpp  BS2RISPathLossUrbanMicroNLOS.h  BS2RISPathLossUrbanMicroNLOS_Highfreq.cpp  BS2RISPathLossUrbanMicroNLOS_Highfreq.h  RIS.cpp  RIS.h  RIS2MSPathLossUrbanMacroIndoor.cpp  RIS2MSPathLossUrbanMacroIndoor.h  RIS2MSPathLossUrbanMacroOutdoorLOS.cpp  RIS2MSPathLossUrbanMacroOutdoorLOS.h  RIS2MSPathLossUrbanMacroOutdoorNLOS.cpp  RIS2MSPathLossUrbanMacroOutdoorNLOS.h  RIS2MSPathLossUrbanMicroLOS.cpp  RIS2MSPathLossUrbanMicroLOS.h  RIS2MSPathLossUrbanMicroLOS_Highfreq.cpp  RIS2MSPathLossUrbanMicroLOS_Highfreq.h  RIS2MSPathLossUrbanMicroNLOS.cpp  RIS2MSPathLossUrbanMicroNLOS.h  RIS2MSPathLossUrbanMicroNLOS_Highfreq.cpp  RIS2MSPathLossUrbanMicroNLOS_Highfreq.h  RISID.cpp  RISID.h  RISMatrix.cpp  RISMatrix.h
sourcecode/Scenario/: FrameRIS.cpp  FrameRIS.h  Framework.cpp  Framework.h  HetNet.cpp  HetNet.h  IndoorHotspot.cpp  IndoorHotspot.h  IndoorNetwork.cpp  IndoorNetwork.h  OneLayerNetwork.cpp  OneLayerNetwork.h  RISUrbanMacro.cpp  RISUrbanMacro.h  RuralMacro.cpp  RuralMacro.h  Scenario.cpp  Scenario.h  TwoLayerNetwork.cpp  TwoLayerNetwork.h  UrbanMacro.cpp  UrbanMacro.h  UrbanMicro.cpp  UrbanMicro.h
sourcecode/Scheduler/: CompetorRankA.cpp  CompetorRankA.h  Mixed_DL_Scheduler.cpp  Mixed_DL_Scheduler.h  PDCCH_Allocator.cpp  PDCCH_Allocator.h  SchedulerDL.cpp  (+9 more)
(+80 files in other folders)
