cmake_minimum_required(VERSION 3.5)
project(chty_tsm)
set(CMAKE_CXX_STANDARD 14)
include_directories(sourcecode)
include_directories(sourcecode/BaseStation)
include_directories(sourcecode/ChannelModel)
include_directories(sourcecode/DetectAlgorithm)
include_directories(sourcecode/DistributeMSAlgo)
include_directories(sourcecode/LinklevelInterface)
include_directories(sourcecode/MobileStation)
include_directories(sourcecode/NetworkDrive)
include_directories(sourcecode/Parameters)
include_directories(sourcecode/Scheduler)
include_directories(sourcecode/Statistician)
include_directories(sourcecode/TrafficModel)
include_directories(sourcecode/Utility)
include_directories(/usr/local/include)


link_directories(/usr/lib/x86_64-linux-gnu)
#link_directories(/usr/local/lib)

add_executable(chty_tsm
        sourcecode/BaseStation/ACKNAKMessageUL.cpp
        sourcecode/BaseStation/ACKNAKMessageUL.h
        sourcecode/BaseStation/BS.cpp
        sourcecode/BaseStation/BS.h
        sourcecode/BaseStation/BSID.cpp
        sourcecode/BaseStation/BSID.h
        sourcecode/BaseStation/BTS.cpp
        sourcecode/BaseStation/BTS.h
        sourcecode/BaseStation/BTS_UL.cpp
        sourcecode/BaseStation/BTS_UL.h
        sourcecode/BaseStation/BTSEBBRank1Txer.cpp
        sourcecode/BaseStation/BTSEBBRank1Txer.h
        sourcecode/BaseStation/BTSID.cpp
        sourcecode/BaseStation/BTSID.h
        sourcecode/BaseStation/BTSMUEBBTxer.cpp
        sourcecode/BaseStation/BTSMUEBBTxer.h
        sourcecode/BaseStation/BTSRxer.cpp
        sourcecode/BaseStation/BTSRxer.h
        sourcecode/BaseStation/BTSTxer.cpp
        sourcecode/BaseStation/BTSTxer.h
        sourcecode/BaseStation/BTSVMIMORxer_trial_2.cpp
        sourcecode/BaseStation/BTSVMIMORxer_trial_2.h
        sourcecode/BaseStation/CodeBook.cpp
        sourcecode/BaseStation/CodeBook.h
        sourcecode/BaseStation/CodeBookFactory.cpp
        sourcecode/BaseStation/CodeBookFactory.h
        sourcecode/BaseStation/Group.cpp
        sourcecode/BaseStation/Group.h
        sourcecode/BaseStation/GroupID.cpp
        sourcecode/BaseStation/GroupID.h
        sourcecode/BaseStation/HARQRxStateBTS.cpp
        sourcecode/BaseStation/HARQRxStateBTS.h
        sourcecode/BaseStation/HARQTxStateBTS.cpp
        sourcecode/BaseStation/HARQTxStateBTS.h
        sourcecode/BaseStation/MSRxBufferBS.cpp
        sourcecode/BaseStation/MSRxBufferBS.h
        sourcecode/BaseStation/MSRxBufferBTS.cpp
        sourcecode/BaseStation/MSRxBufferBTS.h
        sourcecode/BaseStation/MSTxBufferBTS.cpp
        sourcecode/BaseStation/MSTxBufferBTS.h
        sourcecode/BaseStation/NR_Codebook.cpp
        sourcecode/BaseStation/NR_CodeBook.h
        sourcecode/ChannelModel/Antenna.cpp
        sourcecode/ChannelModel/Antenna.h
        sourcecode/ChannelModel/AntennaOrientGain.cpp
        sourcecode/ChannelModel/AntennaOrientGain.h
        sourcecode/ChannelModel/AntennaPanel.cpp
        sourcecode/ChannelModel/AntennaPanel.h
        sourcecode/ChannelModel/AOGOmni.cpp
        sourcecode/ChannelModel/AOGOmni.h
        sourcecode/ChannelModel/AOGPico.cpp
        sourcecode/ChannelModel/AOGPico.h
        sourcecode/ChannelModel/AOGSector.cpp
        sourcecode/ChannelModel/AOGSector.h
        sourcecode/ChannelModel/AOGSector_inH_Circle.cpp
        sourcecode/ChannelModel/AOGSector_inH_Circle.h
        sourcecode/ChannelModel/BasicChannelState.cpp
        sourcecode/ChannelModel/BasicChannelState.h
        sourcecode/ChannelModel/ChannelState.cpp
        sourcecode/ChannelModel/ChannelState.h
        sourcecode/ChannelModel/classholder.h
        sourcecode/ChannelModel/CTXRU.cpp
        sourcecode/ChannelModel/CTXRU.h
        sourcecode/ChannelModel/functions.cpp
        sourcecode/ChannelModel/functions.h
        sourcecode/ChannelModel/GaussianMap.cpp
        sourcecode/ChannelModel/GaussianMap.h
        sourcecode/ChannelModel/libfiles.h
        sourcecode/ChannelModel/LinkMatrix.cpp
        sourcecode/ChannelModel/LinkMatrix.h
		sourcecode/ChannelModel/P.cpp
        sourcecode/ChannelModel/P.h
        sourcecode/ChannelModel/PathLoss.cpp
        sourcecode/ChannelModel/PathLoss.h
        sourcecode/ChannelModel/PathLossIndoorFactoryDHNLOS.cpp
        sourcecode/ChannelModel/PathLossIndoorFactoryDHNLOS.h
        sourcecode/ChannelModel/PathLossIndoorFactoryLOS.cpp
        sourcecode/ChannelModel/PathLossIndoorFactoryLOS.h
        sourcecode/ChannelModel/PathLossIndoorHotspotLOS.cpp
        sourcecode/ChannelModel/PathLossIndoorHotspotLOS.h
        sourcecode/ChannelModel/PathLossIndoorHotspotLOS_Highfreq.cpp
        sourcecode/ChannelModel/PathLossIndoorHotspotLOS_Highfreq.h
        sourcecode/ChannelModel/PathLossIndoorHotspotNLOS.cpp
        sourcecode/ChannelModel/PathLossIndoorHotspotNLOS.h
        sourcecode/ChannelModel/PathLossIndoorHotspotNLOS_Highfreq.cpp
        sourcecode/ChannelModel/PathLossIndoorHotspotNLOS_Highfreq.h
        sourcecode/ChannelModel/PathLossPico2UE_UrbanMicroLOS.cpp
        sourcecode/ChannelModel/PathLossPico2UE_UrbanMicroLOS.h
        sourcecode/ChannelModel/PathLossPico2UE_UrbanMicroNLOS.cpp
        sourcecode/ChannelModel/PathLossPico2UE_UrbanMicroNLOS.h
        sourcecode/ChannelModel/PathLossPico2UE_UrbanMicroO2I.cpp
        sourcecode/ChannelModel/PathLossPico2UE_UrbanMicroO2I.h
        sourcecode/ChannelModel/PathLossRuralMacroLOS.cpp
        sourcecode/ChannelModel/PathLossRuralMacroLOS.h
        sourcecode/ChannelModel/PathLossRuralMacroLOS_Highfreq.cpp
        sourcecode/ChannelModel/PathLossRuralMacroLOS_Highfreq.h
        sourcecode/ChannelModel/PathLossRuralMacroNLOS.cpp
        sourcecode/ChannelModel/PathLossRuralMacroNLOS.h
        sourcecode/ChannelModel/PathLossRuralMacroNLOS_Highfreq.cpp
        sourcecode/ChannelModel/PathLossRuralMacroNLOS_Highfreq.h
        sourcecode/ChannelModel/PathLossRuralMacroO2I.cpp
        sourcecode/ChannelModel/PathLossRuralMacroO2I.h
        sourcecode/ChannelModel/PathLossRuralMacroO2I_Highfreq.cpp
        sourcecode/ChannelModel/PathLossRuralMacroO2I_Highfreq.h
        sourcecode/ChannelModel/PathLossUrbanMacroLOS.cpp
        sourcecode/ChannelModel/PathLossUrbanMacroLOS.h
        sourcecode/ChannelModel/PathLossUrbanMacroLOS_Highfreq.cpp
        sourcecode/ChannelModel/PathLossUrbanMacroLOS_Highfreq.h
        sourcecode/ChannelModel/PathLossUrbanMacroNLOS.cpp
        sourcecode/ChannelModel/PathLossUrbanMacroNLOS.h
        sourcecode/ChannelModel/PathLossUrbanMacroNLOS_Highfreq.cpp
        sourcecode/ChannelModel/PathLossUrbanMacroNLOS_Highfreq.h
        sourcecode/ChannelModel/PathLossUrbanMacroNLOSHata.cpp
        sourcecode/ChannelModel/PathLossUrbanMacroNLOSHata.h
        sourcecode/ChannelModel/PathLossUrbanMacroO2I.cpp
        sourcecode/ChannelModel/PathLossUrbanMacroO2I.h
        sourcecode/ChannelModel/PathLossUrbanMacroO2I_Highfreq.cpp
        sourcecode/ChannelModel/PathLossUrbanMacroO2I_Highfreq.h
        sourcecode/ChannelModel/PathLossUrbanMicroLOS.cpp
        sourcecode/ChannelModel/PathLossUrbanMicroLOS.h
        sourcecode/ChannelModel/PathLossUrbanMicroLOS_Highfreq.cpp
        sourcecode/ChannelModel/PathLossUrbanMicroLOS_Highfreq.h
        sourcecode/ChannelModel/PathLossUrbanMicroNLOS.cpp
        sourcecode/ChannelModel/PathLossUrbanMicroNLOS.h
        sourcecode/ChannelModel/PathLossUrbanMicroNLOS_Highfreq.cpp
        sourcecode/ChannelModel/PathLossUrbanMicroNLOS_Highfreq.h
        sourcecode/ChannelModel/PathLossUrbanMicroO2I.cpp
        sourcecode/ChannelModel/PathLossUrbanMicroO2I.h
        sourcecode/ChannelModel/PathLossUrbanMicroO2I_Highfreq.cpp
        sourcecode/ChannelModel/PathLossUrbanMicroO2I_Highfreq.h
        sourcecode/ChannelModel/PathState.cpp
        sourcecode/ChannelModel/PathState.h
        sourcecode/ChannelModel/Point.cpp
        sourcecode/ChannelModel/Point.h
        sourcecode/ChannelModel/Rx.cpp
        sourcecode/ChannelModel/Rx.h
        sourcecode/ChannelModel/SpaceChannelState.cpp
        sourcecode/ChannelModel/SpaceChannelState.h
        sourcecode/ChannelModel/SubpathState.cpp
        sourcecode/ChannelModel/SubpathState.h
        sourcecode/ChannelModel/Tx.cpp
        sourcecode/ChannelModel/Tx.h
        sourcecode/ChannelModel/WrapAround.cpp
        sourcecode/ChannelModel/WrapAround.h
        sourcecode/ChannelModel/WrapAround0.cpp
        sourcecode/ChannelModel/WrapAround0.h
        sourcecode/ChannelModel/WrapAround19.cpp
        sourcecode/ChannelModel/WrapAround19.h
        sourcecode/ChannelModel/WrapAround7.cpp
        sourcecode/ChannelModel/WrapAround7.h
        sourcecode/ChannelModel/WrapAroundManhattan.cpp
        sourcecode/ChannelModel/WrapAroundManhattan.h
        sourcecode/DetectAlgorithm/Detector_Common.cpp
        sourcecode/DetectAlgorithm/Detector_Common.h
        sourcecode/DetectAlgorithm/Detector_DL.cpp
        sourcecode/DetectAlgorithm/Detector_DL.h
        sourcecode/DetectAlgorithm/Detector_UL.cpp
        sourcecode/DetectAlgorithm/Detector_UL.h
        sourcecode/DetectAlgorithm/IRC.cpp
        sourcecode/DetectAlgorithm/IRC.h
        sourcecode/DetectAlgorithm/IRCAlgorithm.cpp
        sourcecode/DetectAlgorithm/IRCAlgorithm.h
        sourcecode/DetectAlgorithm/MMSE_DL.cpp
        sourcecode/DetectAlgorithm/MMSE_DL.h
        sourcecode/DetectAlgorithm/MMSE_UL.cpp
        sourcecode/DetectAlgorithm/MMSE_UL.h
        sourcecode/DetectAlgorithm/MMSEAlgorithm.cpp
        sourcecode/DetectAlgorithm/MMSEAlgorithm.h
        sourcecode/DetectAlgorithm/MRC_DL.cpp
        sourcecode/DetectAlgorithm/MRC_DL.h
        sourcecode/DetectAlgorithm/MRC_UL.cpp
        sourcecode/DetectAlgorithm/MRC_UL.h
        sourcecode/DetectAlgorithm/MRCAlgorithm.cpp
        sourcecode/DetectAlgorithm/MRCAlgorithm.h
        sourcecode/DetectAlgorithm/SimpleMMSE_DL.cpp
        sourcecode/DetectAlgorithm/SimpleMMSE_DL.h
        sourcecode/DetectAlgorithm/SimpleMMSE_UL.cpp
        sourcecode/DetectAlgorithm/SimpleMMSE_UL.h
        sourcecode/DistributeMSAlgo/DistributeMSAlgo.cpp
        sourcecode/DistributeMSAlgo/DistributeMSAlgo.h
        sourcecode/DistributeMSAlgo/DistributeMSAlgo4indoor.cpp
        sourcecode/DistributeMSAlgo/DistributeMSAlgo4indoor.h
        sourcecode/DistributeMSAlgo/DistributeMSAlgoCenterRectangle.cpp
        sourcecode/DistributeMSAlgo/DistributeMSAlgoCenterRectangle.h
        sourcecode/DistributeMSAlgo/DistributeMSAlgoDiamond.cpp
        sourcecode/DistributeMSAlgo/DistributeMSAlgoDiamond.h
        sourcecode/DistributeMSAlgo/DistributeMSAlgoFile.cpp
        sourcecode/DistributeMSAlgo/DistributeMSAlgoFile.h
        sourcecode/DistributeMSAlgo/DistributeMSAlgoFix.cpp
        sourcecode/DistributeMSAlgo/DistributeMSAlgoFix.h
        sourcecode/DistributeMSAlgo/DistributeMSAlgoForHetNet.cpp
        sourcecode/DistributeMSAlgo/DistributeMSAlgoForHetNet.h
        sourcecode/DistributeMSAlgo/DistributeMSAlgoHexagon.cpp
        sourcecode/DistributeMSAlgo/DistributeMSAlgoHexagon.h
		sourcecode/LinklevelInterface/FERTable.h
        sourcecode/LinklevelInterface/LinkLevelInterface.cpp
        sourcecode/LinklevelInterface/LinkLevelInterface.h
		sourcecode/LinklevelInterface/LinkLevelNR.cpp
        sourcecode/LinklevelInterface/LinkLevelNR.h
		sourcecode/LinklevelInterface/RBIR2BLERNR.cpp
        sourcecode/LinklevelInterface/RBIR2BLERNR.h
		sourcecode/MobileStation/ACKNAKMessageDL.cpp
        sourcecode/MobileStation/ACKNAKMessageDL.h
        sourcecode/MobileStation/CQIMessage.cpp
        sourcecode/MobileStation/CQIMessage.h
        sourcecode/MobileStation/HARQRxStateMS.cpp
        sourcecode/MobileStation/HARQRxStateMS.h
        sourcecode/MobileStation/HARQTxStateMS.cpp
        sourcecode/MobileStation/HARQTxStateMS.h
        sourcecode/MobileStation/MS.cpp
        sourcecode/MobileStation/MS.h
        sourcecode/MobileStation/MSEBBRank1Rxer.cpp
        sourcecode/MobileStation/MSEBBRank1Rxer.h
        sourcecode/MobileStation/MSID.cpp
        sourcecode/MobileStation/MSID.h
        sourcecode/MobileStation/MSMRCTxer.cpp
        sourcecode/MobileStation/MSMRCTxer.h
        sourcecode/MobileStation/MSMUEBBRankARxer.cpp
        sourcecode/MobileStation/MSMUEBBRankARxer.h
        sourcecode/MobileStation/MSRxer.cpp
        sourcecode/MobileStation/MSRxer.h
        sourcecode/MobileStation/MSTxer.cpp
        sourcecode/MobileStation/MSTxer.h
        sourcecode/MobileStation/SoundingMessage.cpp
        sourcecode/MobileStation/SoundingMessage.h
        sourcecode/MobileStation/SRSTxer.cpp
        sourcecode/MobileStation/SRSTxer.h
        sourcecode/NetworkDrive/BSManager.cpp
        sourcecode/NetworkDrive/BSManager.h
        sourcecode/NetworkDrive/ChannelUpdateThread.cpp
        sourcecode/NetworkDrive/ChannelUpdateThread.h
        sourcecode/NetworkDrive/Clock.cpp
        sourcecode/NetworkDrive/Clock.h
        sourcecode/NetworkDrive/MSManager.cpp
        sourcecode/NetworkDrive/MSManager.h
        sourcecode/NetworkDrive/NetWorkDrive.cpp
        sourcecode/NetworkDrive/NetWorkDrive.h
        sourcecode/NetworkDrive/Thread_control.cpp
        sourcecode/NetworkDrive/Thread_control.h
        sourcecode/Parameters/envconfig.h
        sourcecode/Parameters/Parameters.cpp
        sourcecode/Parameters/Parameters.h
        sourcecode/Scheduler/CompetorRankA.cpp
        sourcecode/Scheduler/CompetorRankA.h
        sourcecode/Scheduler/SchedulerDL.cpp
        sourcecode/Scheduler/SchedulerDL.h
        sourcecode/Scheduler/SchedulerUL.cpp
        sourcecode/Scheduler/SchedulerUL.h
        sourcecode/Scheduler/SchedulingMessageDL.cpp
        sourcecode/Scheduler/SchedulingMessageDL.h
        sourcecode/Scheduler/SchedulingMessageUL.cpp
        sourcecode/Scheduler/SchedulingMessageUL.h
		sourcecode/Scheduler/Mixed_DL_Scheduler.cpp
		sourcecode/Scheduler/Mixed_DL_Scheduler.h
		sourcecode/Scheduler/PDCCH_Allocator.cpp
		sourcecode/Scheduler/PDCCH_Allocator.h
		sourcecode/Statistician/BSData.cpp
        sourcecode/Statistician/BSData.h
        sourcecode/Statistician/ChannelInfo.cpp
        sourcecode/Statistician/ChannelInfo.h
        sourcecode/Statistician/Directory.cpp
        sourcecode/Statistician/Directory.h
        sourcecode/Statistician/MSData_DL.cpp
        sourcecode/Statistician/MSData_DL.h
        sourcecode/Statistician/MSData_UL.cpp
        sourcecode/Statistician/MSData_UL.h
        sourcecode/Statistician/Observer.cpp
        sourcecode/Statistician/Observer.h
        sourcecode/Statistician/Statistician.cpp
        sourcecode/Statistician/Statistician.h
		sourcecode/TrafficModel/FTPModel.cpp
        sourcecode/TrafficModel/FTPModel.h
        sourcecode/TrafficModel/FTPModel2.cpp
        sourcecode/TrafficModel/FTPModel2.h
        sourcecode/TrafficModel/FTPModel3.cpp
        sourcecode/TrafficModel/FTPModel3.h
		sourcecode/TrafficModel/MSProperty_XR.cpp
        sourcecode/TrafficModel/MSProperty_XR.h
        sourcecode/TrafficModel/MSProperty_XRmulti.cpp
        sourcecode/TrafficModel/MSProperty_XRmulti.h
        sourcecode/TrafficModel/Packet.cpp
        sourcecode/TrafficModel/Packet.h
        sourcecode/TrafficModel/Packet_xrMULTI.cpp
        sourcecode/TrafficModel/Packet_xrMULTI.h
        sourcecode/TrafficModel/TrafficManager.cpp
        sourcecode/TrafficModel/TrafficManager.h
        sourcecode/TrafficModel/TrafficModel.cpp
        sourcecode/TrafficModel/TrafficModel.h
        sourcecode/TrafficModel/XRModel.cpp
        sourcecode/TrafficModel/XRModel.h
        sourcecode/TrafficModel/XRmultiModel.cpp
        sourcecode/TrafficModel/XRmultiModel.h
		sourcecode/Utility/Thread/threadpool.cpp
		sourcecode/Utility/Thread/threadpool.h
        sourcecode/Utility/cJSON.cpp
        sourcecode/Utility/cJSON.h
        sourcecode/Utility/functions.cpp
        sourcecode/Utility/functions.h
        sourcecode/Utility/IDType.cpp
        sourcecode/Utility/IDType.h
        sourcecode/Utility/Include.h
        sourcecode/Utility/RBID.cpp
        sourcecode/Utility/RBID.h
        sourcecode/Utility/SBID.cpp
        sourcecode/Utility/SBID.h
        sourcecode/Utility/SCID.cpp
        sourcecode/Utility/SCID.h
        sourcecode/Utility/Singleton.h
        sourcecode/Main.cpp
        sourcecode/SafeDeque.h
        sourcecode/SafeMap.h
        sourcecode/SafeUnordered_map.h
        sourcecode/SafaUnordered_map.cpp
        sourcecode/WRITE_FIRST_RW_LOCK.h
        sourcecode/Utility/Random.cpp
        sourcecode/Utility/Random.h
        sourcecode/DCI.cpp 
        sourcecode/DCI.h 
        sourcecode/UCI.cpp
        sourcecode/UCI.h
        sourcecode/PHR.cpp
        sourcecode/PHR.h
        sourcecode/MobileStation/MSTxBufferMS.cpp
        sourcecode/MobileStation/MSTxBufferMS.h
        sourcecode/SR.cpp 
        sourcecode/SR.h
		sourcecode/TrafficModel/MixedTraffic_MS.cpp
		sourcecode/TrafficModel/MixedTraffic_MS.h
		sourcecode/TrafficModel/MixedTraffic.cpp
		sourcecode/TrafficModel/MixedTraffic.h
		sourcecode/TrafficModel/Universal_Packet.cpp
		sourcecode/TrafficModel/Universal_Packet.h
        sourcecode/MobileStation/MAC/LCG.cpp
		sourcecode/MobileStation/MAC/LCG.h
		sourcecode/NetworkDrive/MyTimer.cpp
		sourcecode/NetworkDrive/MyTimer.h
		sourcecode/MobileStation/MAC/MAC_MS.cpp
		sourcecode/MobileStation/MAC/MAC_MS.h
		sourcecode/MobileStation/RRC/RRC_MS.cpp
		sourcecode/MobileStation/RRC/RRC_MS.h
		sourcecode/BaseStation/MAC/MAC_BTS.cpp
		sourcecode/BaseStation/MAC/MAC_BTS.h
		sourcecode/BaseStation/RRC/RRC_BTS.cpp
		sourcecode/BaseStation/RRC/RRC_BTS.h
		sourcecode/BaseStation/RRC/RRC_Include.cpp
		sourcecode/BaseStation/RRC/RRC_Include.h
		sourcecode/DRX.cpp
		sourcecode/DRX.h
		sourcecode/CalcRENumperRB.cpp
		sourcecode/CalcRENumperRB.h
		sourcecode/Scheduler/UL_SchedulingRenewal.cpp sourcecode/Scheduler/UL_SchedulingRenewal.h
		sourcecode/Statistician/Statistics.cpp
		sourcecode/Statistician/Statistics.h
		sourcecode/RIS/RISMatrix.h
		sourcecode/RIS/RISMatrix.cpp
		sourcecode/RIS/BS2RISPathLossUrbanMacroOutdoorLOS.cpp
		sourcecode/RIS/BS2RISPathLossUrbanMacroOutdoorLOS.h
		sourcecode/RIS/BS2RISPathLossUrbanMacroOutdoorNLOS.cpp
		sourcecode/RIS/BS2RISPathLossUrbanMacroOutdoorNLOS.h
		sourcecode/RIS/BS2RISPathLossUrbanMicroLOS.cpp
		sourcecode/RIS/BS2RISPathLossUrbanMicroLOS.h
		sourcecode/RIS/BS2RISPathLossUrbanMicroNLOS.cpp
		sourcecode/RIS/BS2RISPathLossUrbanMicroNLOS.h
		sourcecode/RIS/BS2RISPathLossUrbanMicroLOS_Highfreq.cpp
		sourcecode/RIS/BS2RISPathLossUrbanMicroLOS_Highfreq.h
		sourcecode/RIS/BS2RISPathLossUrbanMicroNLOS_Highfreq.cpp
		sourcecode/RIS/BS2RISPathLossUrbanMicroNLOS_Highfreq.h
		sourcecode/RIS/RIS2MSPathLossUrbanMacroIndoor.cpp
		sourcecode/RIS/RIS2MSPathLossUrbanMacroIndoor.h
		sourcecode/RIS/RIS2MSPathLossUrbanMacroOutdoorLOS.cpp
		sourcecode/RIS/RIS2MSPathLossUrbanMacroOutdoorLOS.h
		sourcecode/RIS/RIS2MSPathLossUrbanMacroOutdoorNLOS.cpp
		sourcecode/RIS/RIS2MSPathLossUrbanMacroOutdoorNLOS.h
		sourcecode/RIS/RIS2MSPathLossUrbanMicroLOS.cpp
		sourcecode/RIS/RIS2MSPathLossUrbanMicroLOS.h
		sourcecode/RIS/RIS2MSPathLossUrbanMicroLOS_Highfreq.cpp
		sourcecode/RIS/RIS2MSPathLossUrbanMicroLOS_Highfreq.h
		sourcecode/RIS/RIS2MSPathLossUrbanMicroNLOS.cpp
		sourcecode/RIS/RIS2MSPathLossUrbanMicroNLOS.h
		sourcecode/RIS/RIS2MSPathLossUrbanMicroNLOS_Highfreq.cpp
		sourcecode/RIS/RIS2MSPathLossUrbanMicroNLOS_Highfreq.h
		sourcecode/RIS/RIS.cpp
		sourcecode/RIS/RIS.h
		sourcecode/RIS/RISID.cpp
		sourcecode/RIS/RISID.h
		sourcecode/ChannelModel/RISCouplingloss.cpp
		sourcecode/ChannelModel/RISCouplingloss.h
		sourcecode/ChannelModel/RISTx.cpp
		sourcecode/ChannelModel/RISTx.h
		sourcecode/ChannelModel/RISRx.cpp
		sourcecode/ChannelModel/RISRx.h
		sourcecode/ChannelModel/BSTx.cpp
		sourcecode/ChannelModel/BSTx.h
		sourcecode/ChannelModel/MSRx.cpp
		sourcecode/ChannelModel/MSRx.h
		sourcecode/Scenario/FrameRIS.cpp
		sourcecode/Scenario/FrameRIS.h
		sourcecode/Scenario/Framework.cpp
		sourcecode/Scenario/Framework.h
		sourcecode/Scenario/OneLayerNetwork.cpp
		sourcecode/Scenario/OneLayerNetwork.h
		sourcecode/Scenario/IndoorNetwork.cpp
		sourcecode/Scenario/IndoorNetwork.h
		sourcecode/Scenario/TwoLayerNetwork.cpp
		sourcecode/Scenario/TwoLayerNetwork.h
		sourcecode/Scenario/IndoorHotspot.cpp
		sourcecode/Scenario/IndoorHotspot.h
		sourcecode/Scenario/Scenario.cpp
		sourcecode/Scenario/Scenario.h
		sourcecode/Scenario/RuralMacro.cpp
		sourcecode/Scenario/RuralMacro.h
		sourcecode/Scenario/UrbanMacro.cpp
		sourcecode/Scenario/UrbanMacro.h
		sourcecode/Scenario/UrbanMicro.cpp
		sourcecode/Scenario/UrbanMicro.h
		sourcecode/Scenario/HetNet.cpp
		sourcecode/Scenario/HetNet.h
		sourcecode/Scenario/RISUrbanMacro.cpp
		sourcecode/Scenario/RISUrbanMacro.h
)


target_link_libraries(chty_tsm libboost_system.so libboost_thread.so libboost_chrono.so libpthread.so  libitpp.so.6 libboost_filesystem.so)
target_link_libraries(chty_tsm /usr/lib/x86_64-linux-gnu/libblas.so.3) #如果用到itpp::vec的operator=运算，好像要加上这个库
#set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -fno-omit-frame-pointer")
#set (CMAKE_LINKER_FLAGS "${CMAKE_LINKER_FLAGS} -fsanitize=address -lasan -lstdc++ ")
#target_link_libraries(chty_tsm asan )
